started image processing code

--- a/.gitignore
+++ b/.gitignore
@@ -69,3 +69,5 @@ gradle-app.setting
 **/build/
 
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,java,gradle
+
+!app/libs/*
